kubernetes/configuration/pgAdmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg-admin
  namespace: questionarios
  labels:
    app.kubernetes.io/name: pg-admin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pg-admin
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pg-admin
    spec:
      volumes:
        - name: pg-admin-pv-storage
          persistentVolumeClaim:
            claimName: pg-admin-pv-claim
      containers:
        - name: pg-admin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/var/lib/pgadmin"
              name: pg-admin-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: pg-admin
  name: pg-admin
  namespace: questionarios
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: pg-admin
  type: ClusterIP
