kubernetes/configuration/kubernetes.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/commit-id: c230a282e16fd1209989b89f34769681c19a652c
    app.quarkus.io/build-timestamp: 2021-11-01 - 18:23:29 +0000
  labels:
    app.kubernetes.io/name: questionarios-api
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
  name: questionarios-api
  namespace: questionarios
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app.kubernetes.io/name: questionarios-api
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/commit-id: c230a282e16fd1209989b89f34769681c19a652c
    app.quarkus.io/build-timestamp: 2021-11-01 - 18:23:29 +0000
  labels:
    app.kubernetes.io/name: questionarios-api
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
  name: questionarios-api
  namespace: questionarios
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: questionarios-api
      app.kubernetes.io/version: 1.0.1-SNAPSHOT
  template:
    metadata:
      annotations:
        app.quarkus.io/commit-id: c230a282e16fd1209989b89f34769681c19a652c
        app.quarkus.io/build-timestamp: 2021-11-01 - 18:23:29 +0000
      labels:
        app.kubernetes.io/name: questionarios-api
        app.kubernetes.io/version: 1.0.1-SNAPSHOT
      namespace: questionarios
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: DB_URL
              valueFrom:
                configMapKeyRef:
                  key: db-url
                  name: db-configmap
            - name: DB_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: db-username
                  name: db-configmap
            - name: DB_PASSWORD
              valueFrom:
                secretKeyRef:
                  key: db-password
                  name: db-secret
          image: alejandrotrilla/questionarios-api:1.0.1-SNAPSHOT
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: questionarios-api
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 45
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 64Mi
      serviceAccount: questionarios-api
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    app.quarkus.io/commit-id: c230a282e16fd1209989b89f34769681c19a652c
    app.quarkus.io/build-timestamp: 2021-11-01 - 18:23:29 +0000
  labels:
    app.kubernetes.io/name: questionarios-api
    app.kubernetes.io/version: 1.0.1-SNAPSHOT
  name: questionarios-api
  namespace: questionarios
spec:
  rules:
    - host: questionarios.com.ar
      http:
        paths:
          - backend:
              service:
                name: questionarios-api
                port:
                  name: http
            path: /
            pathType: Prefix
